better theme switch

--- a/app/www2/index.html
+++ b/app/www2/index.html
@@ -340,8 +340,8 @@
 <!-- app loader -->
 
 <!-- style switch -->
-    <link rel='stylesheet' type='text/css' data-bind="attr:{href: theme.path}">
-    <link rel='stylesheet' type='text/css' data-bind="attr:{href: theme.path_prev}">
+<style type="text/css" data-bind="html:theme.content"></style>
+<style type="text/css" data-bind="html:theme.content_prev"></style>
 <!-- style switch -->
 
 </div>
