Add modal to trash action improved file edit tab display

--- a/app/www2/index.html
+++ b/app/www2/index.html
@@ -265,12 +265,15 @@
         <div class="fileEdit t-all bg-primary" data-bind="with: fileEdit, css:{active:fileEdit.tab()!=''}">
 
             <div class="tabs">
+                <!-- zoom -->
                 <div class="zoom t-all" data-bind="css:{active:tab()=='zoom'}">
                     <div>
                         <img data-bind="attr:{src:preview_url,title:name}" />
                         <div data-bind="with: name"></div>
                     </div>
                 </div>
+                <!-- zoom -->
+                <!-- edit -->
                 <div class="edit t-all" data-bind="css:{active:tab()=='edit'}">
                     <div>
                         <div class="ion-ios7-cloud-outline preview">
@@ -292,6 +295,8 @@
                         </form>
                     </div>
                 </div>
+                <!-- edit -->
+                <!-- logs -->
                 <div class="logs t-all" data-bind="css:{active:tab()=='logs'}">
                     <div>
                         <table>
@@ -310,19 +315,56 @@
                         </table>
                     </div>
                 </div>
+                <!-- logs -->
             </div>
 
+            <!-- toolbar -->
             <ul class="toolbar">
-                <li><a href="#" class="ion-ios7-close-outline t-color btn btn-primary"></a></li>
-                <li><a href="#" class="ion-ios7-eye t-color btn btn-primary" data-bind="css:{active:tab()=='zoom'}"></a></li>
-                <li><a href="#" class="ion-ios7-cloud-upload-outline t-color btn btn-primary" data-bind="css:{active:tab()=='edit'}"></a></li>
-                <li><a href="#" class="ion-ios7-recording-outline t-color btn btn-primary" data-bind="css:{active:tab()=='logs'}"></a></li>
-                <li><a href="#" class="ion-ios7-trash-outline t-color btn btn-primary" data-bind="css:{active:tab()=='trash'}"></a></li>
+                <li>
+                    <a href="#" class="ion-ios7-close-outline t-color btn btn-primary"></a>
+                </li>
+                <li>
+                    <a href="#" class="ion-ios7-eye t-color btn btn-primary"
+                       data-bind="css:{active:tab()=='zoom'}"></a>
+                </li>
+                <li>
+                    <a href="#" class="ion-ios7-cloud-upload-outline t-color btn btn-primary"
+                       data-bind="css:{active:tab()=='edit'}"></a>
+                </li>
+                <li>
+                    <a href="#" class="ion-ios7-recording-outline t-color btn btn-primary"
+                       data-bind="css:{active:tab()=='logs'}"></a>
+                </li>
+                <li>
+                    <a href="#" class="ion-ios7-trash-outline t-color btn btn-primary"
+                       data-bind="css:{active:tab()=='trash'}"></a>
+                </li>
             </ul>
+            <!-- toolbar -->
 
         </div>
         <!-- pop-in -->
 
+
+        <!-- modal confirm -->
+        <div class="modal  fade in" data-bind="with:modal,css:{hide:modal.display()==false}">
+            <div class="bg-warning modal-header  ">
+                <a class="close" data-dismiss="modal">x</a>
+                <h3 data-bind="text:title">Trash file xxxx</h3>
+            </div>
+            <div class="modal-body bg-warning">
+                <h4>Please fill in a commit message</h4>
+                <textarea class="form-control" data-bind="value:message">
+                    Type here
+                </textarea>
+            </div>
+            <div class="bg-warning modal-footer ">
+                <a href="#" class="btn confirm btn-danger t-all"
+                   data-bind="css:{disabled:!is_valid()}">Confirm trash</a>
+                <a href="#" class="btn" data-dismiss="modal">Close</a>
+            </div>
+        </div>
+        <!-- modal confirm -->
     </div>
 <!-- app -->
 
