--- a/app/www2/index.html
+++ b/app/www2/index.html
@@ -173,7 +173,7 @@
                             <tbody data-bind="foreach: items">
                             <tr data-bind="css:type(),attr:{title:path}">
                                 <td class="type-col">
-                                    <span class="btn t-all"
+                                    <span class="btn t-all btn-primary"
                                           data-bind="css:type()=='file'?'ion-ios7-photos-outline':'ion-ios7-folder-outline'"></span>
                                 </td>
                                 <td class="name-col" data-bind="text: name"></td>
