--- a/app/www2/index.html
+++ b/app/www2/index.html
@@ -139,11 +139,14 @@
 
             <!-- navigation -->
             <div class="container-pager">
+                <!-- Pagination items -->
                 <div class="pull-left">
                     <ul class="nav navbar-nav navigation" data-bind="foreach: $parent.navigation.breadcrumb">
                         <li data-bind="css:{disabled:active}"><a href="#" class="t-font" data-bind="text: short_name"></a></li>
                     </ul>
                 </div>
+                <!-- Pagination items -->
+                <!-- Pagination status -->
                 <div class="pull-right">
                     <ul class="pagination pagination-sm">
                         <li><a href="#" data-bind="text:'display '+items().length +' on '+$parent.pager.total_count()+' items'"></a></li>
@@ -152,6 +155,21 @@
                         <li data-bind="css:{active:selected,disabled:!enabled}"><a href="#" data-bind="text:name"></a></li>
                     </ul>
                 </div>
+                <!-- Pagination status -->
+                <!-- Display -->
+                <div class="displaySelector pull-right">
+                    <ul class="nav nav-pills ">
+                        <li data-mode="table"
+                            data-bind="css:{active:display()=='table'}">
+                            <a href="#" class="ion-ios7-drag"></a>
+                        </li>
+                        <li data-mode="thumbs"
+                            data-bind="css:{active:display()=='thumbs'}">
+                            <a href="#" class="ion-ios7-keypad-outline"></a>
+                        </li>
+                    </ul>
+                </div>
+                <!-- Display -->
             </div>
             <!-- navigation -->
 
@@ -236,11 +254,14 @@
 
             <!-- navigation -->
             <div class="container-pager">
+                <!-- Pagination items -->
                 <div class="pull-left">
                     <ul class="nav navbar-nav navigation" data-bind="foreach: $parent.navigation.breadcrumb">
                         <li data-bind="css:{disabled:active}"><a href="#" class="t-font" data-bind="text: short_name"></a></li>
                     </ul>
                 </div>
+                <!-- Pagination items -->
+                <!-- Pagination status -->
                 <div class="pull-right">
                     <ul class="pagination pagination-sm">
                         <li><a href="#" data-bind="text:'display '+items().length +' on '+$parent.pager.total_count()+' items'"></a></li>
@@ -249,6 +270,21 @@
                         <li data-bind="css:{active:selected,disabled:!enabled}"><a href="#" data-bind="text:name"></a></li>
                     </ul>
                 </div>
+                <!-- Pagination status -->
+                <!-- Display -->
+                <div class="displaySelector pull-right">
+                    <ul class="nav nav-pills ">
+                        <li data-mode="table"
+                            data-bind="css:{active:display()=='table'}">
+                            <a href="#" class="ion-ios7-drag"></a>
+                        </li>
+                        <li data-mode="thumbs"
+                            data-bind="css:{active:display()=='thumbs'}">
+                            <a href="#" class="ion-ios7-keypad-outline"></a>
+                        </li>
+                    </ul>
+                </div>
+                <!-- Display -->
             </div>
             <!-- navigation -->
 
