--- a/app/www2/index.html
+++ b/app/www2/index.html
@@ -269,6 +269,18 @@
                         </ul>
                     </div>
                     <!-- Pagination status -->
+                    <!-- bt up -->
+                    <div class="pull-right">
+                        <ul class="pagination pagination-sm">
+                            <li data-bind="css: {disabled:$parent.navigation.location()=='/'}"
+                                class="up">
+                                <a href="#" class="t-font">
+                                    <span class="ion-ios7-arrow-thin-up"></span>Up
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- bt up -->
                     <!-- Pagination items -->
                     <div class="pull-right">
                         <ul class="items-pager pagination pagination-sm"
