--- a/app/www2/index.html
+++ b/app/www2/index.html
@@ -315,7 +315,7 @@
         </div>
 
         <!-- pop-in -->
-        <div class="fileEdit t-all bg-primary" data-bind="with: fileEdit, css:{active:fileEdit.tab()!=''}">
+        <div class="fileDetail t-all bg-primary" data-bind="with: fileDetail, css:{active:fileDetail.tab()!=''}">
 
             <div class="tabs">
                 <!-- zoom -->
